name:                metar-decoder
version:             0.1.0.0
synopsis:            A command line tool for scraping and decoding METAR codes.
description:         Please see the README.
homepage:            https://github.com/Nynergy/metar-decoder#readme
license:             BSD3
license-file:        LICENSE
author:              Ben Buchanan
maintainer:          bsbuchanan99@gmail.com
copyright:           2020
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable metar-decoder
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       MetarTypes
                     , Parser
                     , Scraper
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , split
                     , wreq
